<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherFacebookPost</string>
    <string name="action_settings">Settings</string>
    <string name="query">zip or location</string>
    <string name="F">\u2109</string>
    <string name="C">\u2103</string>
    <string name="Search">Search</string>
    <string name="caption">Forecast</string>
    <string name="sharew">Share Current Weather</string>
    <string name="sharef">Share Weather Forecast</string>
    <string name="app_id">316079088532297</string>
	<string-array name="post_opt_array">
        <item>Post Current Weather</item>
        <item>Cancel</item>
    </string-array>
</resources>
